# mcp-wikipedia-assistant

./: README.md
MCP/MCP/: create_sample_db.py  mcp.json  mcp_demo.py  sample.db
MCP/Wikipedia/: IMPLEMENTATION_SUMMARY.md  README.md  config.py  setup.sh  wikipedia_bot.py
MCP/Wikipedia/MCP-Server/: LICENSE  README.md  pyproject.toml  start.sh
MCP/Wikipedia/Summarizer/: requirements.txt  wikipedia_summarizer.py
