[tool.poetry]
name = "wikimedia-enterprise-mcp"
version = "0.1.6"
description = "implementation of the model context protocol for the wikimedia enterprise api and wikibase REST API"
authors = ["Daniel Erenrich <derenrich@wikimedia.org>"]
repository = "https://gitlab.wikimedia.org/repos/future-audiences/wikimedia-enterprise-model-context-protocol"
license = "MIT"
readme = "README.md"
keywords = ["wikimedia", "wikidata", "wikipedia", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]


[tool.poetry.dependencies]
python = "^3.11"
wme = "^0.1.0"
python-dotenv = "^1.0.1"
mcp = "^1.0.0"
mediawikiapi = "^1.2"
asyncer = "^0.0.8"
wikibase-rest-api-client = "^0.2.2"
wiki2md = "^0.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.5"
mypy = "^1.10.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
wikimedia-enterprise-mcp = "wikimedia_enterprise_mcp.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
